--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -661,3 +661,8 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Ren2020FastSpeech2]: [**FastSpeech2**: Fast and High-Quality End-to-End Text-to-Speech. ArXiv:2006.04558.](../Acoustic/2020.06.08_FastSpeech2.md)
 [^Kim2020Glow-TTS]: [**Glow-TTS**: A Generative Flow for Text-to-Speech via Monotonic Alignment Search. NeurIPS2020.](../Acoustic/2020.05.22_Glow-TTS.md)
 [^Kim2021VITS]: [**VITS**: Conditional Variational Autoencoder with Adversarial Learning for End-To-End Text-to-Speech. ICML2021.](../E2E/2021.06.11_VITS.md)
+[^Popov2021Grad-TTS]: [**Grad-TTS**: A Diffusion Probabilistic Model for Text-to-Speech. ICML2021.](../Acoustic/2021.05.13_Grad-TTS.md)
+[^Wang2023VioLA]: [**VioLA**: Unified Codec Language Models for Speech Recognition, Synthesis, and Translation. ArXiv:2305.16107.](../SpeechLM/ST2ST/2023.05.25_VioLA.md)
+[^Tan2024NaturalSpeech]: [**NaturalSpeech**: End-to-End Text-to-Speech Synthesis with Human-Level Quality. TPAMI2024.](../E2E/2022.05.09_NaturalSpeech.md)
+[^Wang2023VALL-E]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers. ArXiv:2301.02111.](../SpeechLM/ST2S/2023.01.05_VALL-E.md)
+[^Zhang2023VALL-E-X]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling. ArXiv:2303.03926.](../SpeechLM/ST2S/2023.03.07_VALL-E_X.md)
