--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -666,3 +666,9 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Tan2024NaturalSpeech]: [**NaturalSpeech**: End-to-End Text-to-Speech Synthesis with Human-Level Quality. TPAMI2024.](../E2E/2022.05.09_NaturalSpeech.md)
 [^Wang2023VALL-E]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers. ArXiv:2301.02111.](../SpeechLM/ST2S/2023.01.05_VALL-E.md)
 [^Zhang2023VALL-E-X]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling. ArXiv:2303.03926.](../SpeechLM/ST2S/2023.03.07_VALL-E_X.md)
+[^Shen2023NaturalSpeech2]: [**NaturalSpeech2**: Latent Diffusion Models Are Natural and Zero-Shot Speech and Singing Synthesizers. ArXiv:2304.09116.](../Diffusion/2023.04.18_NaturalSpeech2.md)
+[^Ju2024NaturalSpeech3]: [**NaturalSpeech3**: Zero-Shot Speech Synthesis with Factorized Codec and Diffusion Models. ICML2024.](../Diffusion/2024.03.05_NaturalSpeech3.md)
+[^Chen2024VALL-E2]: [**VALL-E 2**: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers. ArXiv:2406.05370.](../SpeechLM/ST2S/2024.06.08_VALL-E_2.md)
+[^Le2024VoiceBox]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale. NeurIPS2024.](../Diffusion/2023.06.23_Voicebox.md)
+[^Song2024ELLA-V]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering. ArXiv:2401.07333.](../SpeechLM/ST2S/2024.01.14_ELLA-V.md)
+[^Du2024VALL-T]: [**VALL-T**: Decoder-Only Generative Transducer for Robust and Decoding-Controllable Text-to-Speech. ArXiv:2401.14321.](../SpeechLM/ST2S/2024.01.25_VALL-T.md)
