--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -672,3 +672,8 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Le2024VoiceBox]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale. NeurIPS2024.](../Diffusion/2023.06.23_Voicebox.md)
 [^Song2024ELLA-V]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering. ArXiv:2401.07333.](../SpeechLM/ST2S/2024.01.14_ELLA-V.md)
 [^Du2024VALL-T]: [**VALL-T**: Decoder-Only Generative Transducer for Robust and Decoding-Controllable Text-to-Speech. ArXiv:2401.14321.](../SpeechLM/ST2S/2024.01.25_VALL-T.md)
+[^Han2024VALL-E-R]: [**VALL-E R**: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment. ArXiv:2406.07855.](../SpeechLM/ST2S/2024.06.12_VALL-E_R.md)
+[^Xin2024RALL-E]: [**RALL-E**: Robust Codec Language Modeling with Chain-of-Thought Prompting for Text-to-Speech Synthesis. ArXiv:2404.03204.](../SpeechLM/ST2S/2024.04.04_RALL-E.md)
+[^Peng2024VoiceCraft]: [**VoiceCraft**: Zero-Shot Speech Editing and Text-to-Speech in the Wild. ArXiv:2403.16973.](../SpeechLM/2024.03.25_VoiceCraft.md)
+[^Zeghidour2021SoundStream]: [**SoundStream**: An End-to-End Neural Audio Codec. TASLP2021.](../Tokenizers/2021.07.07_SoundStream.md)
+[^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression. ArXiv:2210.13438.](../Tokenizers/2022.10.24_EnCodec.md)
