--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -677,3 +677,8 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Peng2024VoiceCraft]: [**VoiceCraft**: Zero-Shot Speech Editing and Text-to-Speech in the Wild. ArXiv:2403.16973.](../SpeechLM/2024.03.25_VoiceCraft.md)
 [^Zeghidour2021SoundStream]: [**SoundStream**: An End-to-End Neural Audio Codec. TASLP2021.](../Tokenizers/2021.07.07_SoundStream.md)
 [^Defossez2022EnCodec]: [**EnCodec**: High Fidelity Neural Audio Compression. ArXiv:2210.13438.](../Tokenizers/2022.10.24_EnCodec.md)
+[^Wu2023AudioDec]: [**AudioDec**: An Open-source Streaming High-fidelity Neural Audio Codec. ICASSP2023.](../Tokenizers/2023.05.26_AudioDec.md)
+[^Yang2023HiFi-Codec]: [**HiFi-Codec**: Group-Residual Vector Quantization for High Fidelity Audio Codec. ArXiv:2305.02765.](../Tokenizers/2023.05.04_HiFi-Codec.md)
+[^Zhang2023SpeechTokenizer]: [**SpeechTokenizer**: Unified Speech Tokenizer for Speech Large Language Models. ArXiv:2308.16692/ICLR2024.](../Tokenizers/2023.08.31_SpeechTokenizer.md)
+[^Bai2024dMel]: [**dMel**: Speech Tokenization Made Simple. ArXiv:2407.15835.](../Tokenizers/2024.07.22_dMel.md)
+[^Niu2024NDVQ]: [**NDVQ**: Robust Neural Audio Codec with Normal Distribution-Based Vector Quantization. ArXiv:2409.12717.](../Tokenizers/2024.09.19_NDVQ.md)
