--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -687,3 +687,8 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Meng2024MELLE]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization. ArXiv:2407.08551](../SpeechLM/ST2S/2024.07.11_MELLE.md)
 [^Ho2020DDPM]: [**DDPM**: Denoising Diffusion Probabilistic Models. ArXiv:2006.11239/NeurIPS2020.](../Diffusion/_2020.06.19_DDPM.md)
 [^Song2020Score]: [Score-Based Generative Modeling through Stochastic Differential Equations. ArXiv:2011.13456.](../Diffusion/_2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)
+[^Lipman2022FM]: [**Flow Matching** for Generative Modeling. ArXiv:2210.02747.](_2022.10.06_Flow_Matching.md)
+[^Guo2024VoiceFlow]: [**VoiceFlow**: Efficient Text-to-Speech with Rectified Flow Matching. ArXiv:2309.05027/ICASSP2024.](2023.09.10_VoiceFlow.md)
+[^Mehta2024Matcha-TTS]: [**Matcha-TTS**: A Fast TTS Architecture with Conditional Flow Matching. ArXiv:2309.03199/ICASSP2024.](2023.09.06_Matcha-TTS.md)
+[^Lee2024DiTTo-TTS]: [**DiTTo-TTS**: Diffusion Transformers for Scalable Text-to-Speech without Domain-Specific Factors. ArXiv:2406.11427.](../Diffusion/2024.06.17_DiTTo-TTS.md)
+[^Eskimez2024E2TTS]: [**E2 TTS**: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS. ArXiv:2406.18009/STL2024.](../Diffusion/2024.06.26_E2_TTS.md)
