--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -692,3 +692,7 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Mehta2024Matcha-TTS]: [**Matcha-TTS**: A Fast TTS Architecture with Conditional Flow Matching. ArXiv:2309.03199/ICASSP2024.](2023.09.06_Matcha-TTS.md)
 [^Lee2024DiTTo-TTS]: [**DiTTo-TTS**: Diffusion Transformers for Scalable Text-to-Speech without Domain-Specific Factors. ArXiv:2406.11427.](../Diffusion/2024.06.17_DiTTo-TTS.md)
 [^Eskimez2024E2TTS]: [**E2 TTS**: Embarrassingly Easy Fully Non-Autoregressive Zero-Shot TTS. ArXiv:2406.18009/STL2024.](../Diffusion/2024.06.26_E2_TTS.md)
+[^Esser2024StableDiffusion3]: [**StableDiffusion3**: Scaling Rectified Flow Transformers for High-Resolution Image Synthesis. ArXiv:2403.03206/ICML2024.](../Diffusion/2024.03.05_StableDiffusion3.md)
+[^Fei2024FluxMusic]: [**FluxMusic**: FLUX that Plays Music. ArXiv:2409.00587.](../Diffusion/2024.09.01_FluxMusic.md)
+[^Anastassiou2024Seed-TTS]: [**Seed-TTS**: A Family of High-Quality Versatile Speech Generation Models. ArXiv:2406.02430.](../SpeechLM/2024.06.04_Seed-TTS.md)
+[^Gao2023E3TTS]: [**E3 TTS**: Easy End-to-End Diffusion-based Text to Speech. ArXiv:2311.00945/ASRU2023.](../Diffusion/2023.11.02_E3_TTS.md)
