--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -696,3 +696,8 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Fei2024FluxMusic]: [**FluxMusic**: FLUX that Plays Music. ArXiv:2409.00587.](../Diffusion/2024.09.01_FluxMusic.md)
 [^Anastassiou2024Seed-TTS]: [**Seed-TTS**: A Family of High-Quality Versatile Speech Generation Models. ArXiv:2406.02430.](../SpeechLM/2024.06.04_Seed-TTS.md)
 [^Gao2023E3TTS]: [**E3 TTS**: Easy End-to-End Diffusion-based Text to Speech. ArXiv:2311.00945/ASRU2023.](../Diffusion/2023.11.02_E3_TTS.md)
+[^Peebles2023DiT]: [**DiT**: Scalable Diffusion Models with Transformers. ArXiv:2212.09748/ICCV2023.](../Diffusion/_2022.12.19_DiT.md)
+[^Woo2023ConvNeXtV2]: [**ConvNeXt V2**: Co-designing and Scaling ConvNets with Masked Autoencoders. ArXiv:2301.00808/CVPR2023.](../_Basis/2023.01.02_ConvNeXt_V2.md)
+[^Kingma2024VDM++]: [**VDM++**: Understanding Diffusion Objectives as the ELBO with Simple Data Augmentation. ArXiv:2303.00848/NeurIPS2024.](../Diffusion/2023.09.25_VDM++.md)
+[^Salimans2022ProgressiveDistillation]: [Progressive Distillation for Fast Sampling of Diffusion Models. ArXiv:2202.00512.](../Diffusion/_2022.02.01_Progressive_Distillation.md)
+[^Dhariwal2021ADM]: [**ADM/CG**: Diffusion Models Beat GANs on Image Synthesis. ArXiv:2105.05233/NeurIPS2021.](../Diffusion/_2021.05.11_ADM.md)
