--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -706,3 +706,8 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Liu2024E1TTS]: [**E1 TTS**: Simple and Fast Non-Autoregressive TTS. ArXiv:2409.09351.](../Diffusion/2024.09.14_E1_TTS.md)
 [^Liu2022ConvNeXt]: [**ConvNeXt**: A ConvNet for the 2020s. ArXiv:2201.03545/CVPR2022.](../_Basis/2022.01.10_ConvNeXt.md)
 [^Siuzdak2023Vocos]: [**Vocos**: Closing the Gap between Time-Domain and Fourier-Based Neural Vocoders for High-Quality Audio Synthesis. ArXiv:2306.00814/ICLR2024..](../Vocoder/2023.03.01_Vocos.md)
+[^Okamoto2024ConvNeXT-TTS&VC]: [ConvNeXt-TTS and ConvNeXt-VC: Convnext-Based Fast End-to-End Sequence-to-Sequence Text-to-Speech and Voice Conversion. ICASSP2024.](../E2E/2024.03.18_ConvNeXt-TTS.md)
+[^Su2024RoFormer]: [**RoFormer/RoPE**: Enhanced Transformer with Rotary Position Embedding. ArXiv:2104.09864/Neurocomputing2021.](../_Transformer/2021.04.20_RoFormer.md)
+[^Press2021ALiBi]: [**ALiBi**: Train Short, Test Long: Attention with Linear Biases Enables Input Length Extrapolation. ArXiv:2108.12409.](../../Modules/Attention/AliBi.md)
+[^Ronneberger2015U-Net]: [**U-Net**: Convolutional Networks for Biomedical Image Segmentation. MICCAI2015](../_Basis/U-Net.md)
+[^Atchison1980LogisticNorm]: [Logistic-Normal Distributions: Some Properties and Uses. Biometrika1980.](../_Basis/LogisticNorm.md)
