--- a/Models/FlowMatching/2024.10.09_F5-TTS.md
+++ b/Models/FlowMatching/2024.10.09_F5-TTS.md
@@ -719,3 +719,8 @@ We will open-source our code, and models, to enhance transparency and facilitate
 [^Loshchilov2017AdamW]: [**AdamW**: Decoupled Weight Decay Regularization. ArXiv:1711.05101/ICLR2019.](../../Modules/Optimization/2017.11.14_AdamW.md)
 [^Karras2024EMA]: [**EMA**: Analyzing and Improving the Training Dynamics of Diffusion Models. ArXiv:2312.02696/CVPR2024.](../_Basis/EMA.md)
 [^Guo2024FireRedTTS]: [**FireRedTTS**: A Foundation Text-To-Speech Framework for Industry-Level Generative Speech Applications. ArXiv:2409.03283.](../SpeechLM/2024.09.05_FireRedTTS.md)
+[^Du2024CosyVoice]: [**CosyVoice**: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens. ArXiv:2407.05407.](../SpeechLM/ST2S/2024.07.07_CosyVoice.md)
+[^Wang2024MaskGCT]: [**MaskGCT**: Zero-Shot Text-to-Speech with Masked Generative Codec Transformer. ArXiv:2409.00750.](../SpeechLM/ST2S/2024.09.01_MaskGCT.md)
+[^Radford2023Whisper]: [**Whisper**: Robust Speech Recognition via Large-Scale Weak Supervision. ArXiv:2212.04356/ICML2023.](../ASR/2022.12.06_Whisper.md)
+[^Gao2023FunASR]: [**FunASR**: A Fundamental End-to-End Speech Recognition Toolkit. ArXiv:2305.11013/InterSpeech2023.](../Toolkits/2023.05.18_FunASR.md)
+[^Chen2022WavLM]: [**WavLM**: Large-Scale Self-Supervised Pre-Training for Full Stack Speech Processing. ArXiv:2110.13900/JSTSP2022.](../Tokenizers/2021.10.26_WavLM.md)
