--- a/Models/FlowMatching/2023.09.06_Matcha-TTS.md
+++ b/Models/FlowMatching/2023.09.06_Matcha-TTS.md
@@ -16,8 +16,8 @@
   - [Github](https://github.com/shivammehta25/Matcha-TTS)
   - [Demo](https://shivammehta25.github.io/Matcha-TTS/)
 - 文件:
-  - [ArXiv](_PDF/2309.03199v2__Matcha-TTS__A_Fast_TTS_Architecture_with_Conditional_Flow_Matching.pdf)
-  - [Publication](_PDF/2309.03199p0__Matcha-TTS__ICASSP2024.pdf)
+  - [ArXiv](../Diffusion/_PDF/2309.03199v2__Matcha-TTS__A_Fast_TTS_Architecture_with_Conditional_Flow_Matching.pdf)
+  - [Publication](../Diffusion/_PDF/2309.03199p0__Matcha-TTS__ICASSP2024.pdf)
 
 </details>
 
@@ -32,7 +32,7 @@ Please see [this https URL](https://shivammehta25.github.io/Matcha-TTS/) for aud
 
 ## 1.Introduction: 引言
 
-Diffusion probabilistic models (DPMs) (cf. [NCSN](../_Basis/2019.07.12_NCSN.md)) are currently setting new standards in deep generative modelling on continuous-valued data-generation tasks such as image synthesis ([Guided_Diffusion](../_Basis/2021.05.11_Guided_Diffusion.md); [LDM](../Diffusion/2021.12.20_LDM.md)), motion synthesis \cite{alexanderson2023listen,mehta2023diff}, and speech synthesis ([WaveGrad](../Vocoder/2020.09.02_WaveGrad.md); [WaveGrad2](../Vocoder/2021.06.17_WaveGrad2.md); [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md); [Diff-TTS](../Acoustic/2021.04.03_Diff-TTS.md); [DiffWave](../Vocoder/2020.09.21_DiffWave.md)) - the topic of this paper.
+Diffusion probabilistic models (DPMs) (cf. [NCSN](../_Basis/2019.07.12_NCSN.md)) are currently setting new standards in deep generative modelling on continuous-valued data-generation tasks such as image synthesis ([Guided_Diffusion](../_Basis/2021.05.11_Guided_Diffusion.md); [LDM](../Diffusion/_2021.12.20_LDM.md)), motion synthesis \cite{alexanderson2023listen,mehta2023diff}, and speech synthesis ([WaveGrad](../Vocoder/2020.09.02_WaveGrad.md); [WaveGrad2](../Vocoder/2021.06.17_WaveGrad2.md); [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md); [Diff-TTS](../Acoustic/2021.04.03_Diff-TTS.md); [DiffWave](../Vocoder/2020.09.21_DiffWave.md)) - the topic of this paper.
 DPMs define a diffusion process which transforms the data (a.k.a. target) distribution to a prior (a.k.a. source) distribution, e.g., a Gaussian.
 They then learn a sampling process that reverses the diffusion process.
 The two processes can be formulated as forward- and reverse-time stochastic differential equations (SDEs) \cite{song2021score}.
@@ -66,7 +66,7 @@ Audio examples and code are provided at https://shivammehta25.github.io/Matcha-T
 DPMs have been applied to numerous speech-synthesis tasks with impressive results, including waveform generation ([WaveGrad](../Vocoder/2020.09.02_WaveGrad.md); [DiffWave](../Vocoder/2020.09.21_DiffWave.md)) and end-to-end TTS ([WaveGrad2](../Vocoder/2021.06.17_WaveGrad2.md)).
 [Diff-TTS](../Acoustic/2021.04.03_Diff-TTS.md) was first to apply DPMs for acoustic modelling.
 Shortly after, [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md) conceptualised the diffusion process as an SDE.
-Although these models, and descendants like [Fast Grad-TTS](../_tmp/Fast_Grad-TTS.md), are non-autoregressive, [TorToiSe-TTS](../Diffusion/2023.05.12_TorToise-TTS.md) demonstrated DPMs in an autoregressive TTS model with quantised latents.
+Although these models, and descendants like [Fast Grad-TTS](../Acoustic/2022.09.18_Fast_Grad-TTS.md), are non-autoregressive, [TorToiSe-TTS](../Diffusion/2023.05.12_TorToise-TTS.md) demonstrated DPMs in an autoregressive TTS model with quantised latents.
 
 The above models -- like many modern TTS acoustic models -- use an encoder-decoder architecture with Transformer blocks in the encoder.
 Many models, e.g., [FastSpeech](../Acoustic/2019.05.22_FastSpeech.md [FastSpeech2](../Acoustic/2020.06.08_FastSpeech2.md), use sinusoidal position embeddings for positional dependences.
@@ -84,7 +84,7 @@ DPM-based methods like [Diff-TTS](../Acoustic/2021.04.03_Diff-TTS.md) and [ProDi
 This treats mel spectrograms as images and implicitly assumes translation invariance in both time and frequency.
 However, speech mel-spectra are not fully translation-invariant along the frequency axis, and 2D decoders generally require more memory as they introduce an extra dimension to the tensors.
 Meanwhile, non-probabilistic models like FastSpeech 1 and 2 have demonstrated that decoders with (1D) Transformers can learn long-range dependencies and fast, parallel synthesis.
-***Matcha-TTS*** also uses Transformers in the decoder, but in a 1D U-Net design inspired by the 2D U-Nets in the Stable Diffusion image-generation model ([LDM](../Diffusion/2021.12.20_LDM.md)).
+***Matcha-TTS*** also uses Transformers in the decoder, but in a 1D U-Net design inspired by the 2D U-Nets in the Stable Diffusion image-generation model ([LDM](../Diffusion/_2021.12.20_LDM.md)).
 
 Whilst some TTS systems, e.g., [FastSpeech](../Acoustic/2019.05.22_FastSpeech.mdly on externally-supplied alignments, most systems are capable of learning to speak and align at the same time, although it has been found to be important to encourage or enforce monotonic alignments \cite{watts2019where,mehta2022neuralhmm} for fast and effective training.
 One mechanism for this is monotonic alignment search (MAS), used by, e.g., [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md) and [VITS](../E2E/2021.06.11_VITS.md).
@@ -102,7 +102,7 @@ Crucially, by leveraging ideas from optimal transport, CFM can be set up to yiel
 This technique is called **OT-CFM**; **rectified flows** \cite{liu2023flow} represent concurrent work with a similar idea.
 The simple paths mean that the ODE can be solved accurately using few discretization steps, i.e., accurate model samples can be drawn with fewer neural-network evaluations than DPMs, enabling much faster synthesis for the same quality.
 
-CFM is a new technique that differs from earlier approaches to speed up SDE/ODE-based TTS, which most often were based on distillation (e.g., [ProDiff](../Diffusion/2022.07.13_ProDiff.md); [Fast Grad-TTS](../_tmp/Fast_Grad-TTS.md); [CoMoSpeech](../Diffusion/2023.05.11_CoMoSpeech.md)).
+CFM is a new technique that differs from earlier approaches to speed up SDE/ODE-based TTS, which most often were based on distillation (e.g., [ProDiff](../Diffusion/2022.07.13_ProDiff.md); [Fast Grad-TTS](../Acoustic/2022.09.18_Fast_Grad-TTS.md); [CoMoSpeech](../Diffusion/2023.05.11_CoMoSpeech.md)).
 Prior to ***Matcha-TTS***, the only public preprint on CFM-based acoustic modelling was the [Voicebox](../SpeechLM/2023.06.23_VoiceBox.md) model from Meta.
 [Voicebox (VB)](../SpeechLM/2023.06.23_VoiceBox.md) is a system that performs various text-guided speech-infilling tasks based on large-scale training data, with its English variant (VB-En) being trained on 60k hours of proprietary data.
 VB differs substantially from ***Matcha-TTS***:
@@ -171,7 +171,7 @@ The predicted durations, rounded up, are used to upsample (duplicate) the vector
 This mean is used to condition the decoder that predicts the vector field $v_t(\phi^{\mathrm{OT}}_t(x_0) | \boldsymbol{\mu}; \theta)$ used for synthesis, but is not used as the mean for the initial noise samples $x_0$ (unlike [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md)).
 
 \cref{fig: decoder architecture} shows the ***Matcha-TTS*** decoder architecture.
-Inspired by [LDM](../Diffusion/2021.12.20_LDM.md), it is a U-Net containing 1D convolutional residual blocks to downsample and upsample the inputs, with the flow-matching step $t\in[0,1]$ embedded as in [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md).
+Inspired by [LDM](../Diffusion/_2021.12.20_LDM.md), it is a U-Net containing 1D convolutional residual blocks to downsample and upsample the inputs, with the flow-matching step $t\in[0,1]$ embedded as in [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md).
 Each residual block is followed by a Transformer block, whose feed forward nets use snake beta activations ([BigVGAN](../Vocoder/2022.06.09_BigVGAN.md)).
 These Transformers do not use any position embeddings, since between-phone positional information already has been baked in by the encoder, and the convolution and downsampling operations act to interpolate these between frames within the same phone and distinguish their relative positions from each other.
 This decoder network is significantly faster to evaluate and consumes less memory than the 2D convolutional-only U-Net used by [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md).
